--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -16,23 +16,29 @@
 }
 
 .email{
-    width:400px;
+    /* width:400px; */
     height: 55px;
     background: black ;
     filter: opacity(70%);
     color: antiquewhite;
     display: inline-block;
     margin-right: 5px;
-}
-.email::after{
-    height: 55px;
-    color: antiquewhite;
-    display: inline-block;
-    
+    width: 110%;
 }
 
-.large-button{
-    display: inline-block;
+
+/* .large-button{
+    display: inline;
     background-color: red;
     height:55px;
+    width: 10%;
+} */
+
+.register{
+    width:40vw;
+    height: 55px;
+    z-index: 10;
+    
+    display: flex;
+    flex-direction: row;
 }
